# huguenot-inn

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  paginate.py  pyproject.toml
.github/workflows/: release.yml
packaging/: generate_icons.py  huguenot-inn.spec  pyinstaller_entry.py
packaging/flatpak/: com.nikhilsomaru.HuguenotInn.desktop  com.nikhilsomaru.HuguenotInn.metainfo.xml  com.nikhilsomaru.HuguenotInn.yml  requirements.txt
packaging/windows/: huguenot-inn.wxs
scripts/: build_macos_dmg.sh  build_windows_msi.ps1  release_artifacts.py
src/huguenot/: __init__.py  __main__.py  app.py
src/huguenot/application/: __init__.py  analysis.py  disk_usage.py  duplicates.py  index_rows.py  protocols.py  services.py  source_import.py
src/huguenot/documents/: __init__.py  authorities_index.py  converter.py  docling_adapter.py  docling_models.py  ir_cache.py  legal_title_candidates.py  matter_index_pdf.py  reportlab_index.py  settings.py
src/huguenot/domain/: __init__.py  document_ir.py  flags.py  legal_titles.py  models.py  output_names.py  page_numbering.py  party_labels.py  source_documents.py  validation.py
src/huguenot/pdf/: __init__.py  authority_detection.py  bundle.py
src/huguenot/persistence/: __init__.py  database.py  repositories.py
src/huguenot/ui/: __init__.py  about.py  app.py  duplicate_dialog.py  (+1 more)
tests/: test_authority_detection.py  test_bundle_index_rows.py  test_disk_usage_service.py  test_docling_adapter.py  test_docling_analysis_service.py  test_docling_models.py  test_document_ir_cache.py  test_docx_index.py  test_domain_matter.py  test_duplicate_pdf_additions.py  test_flag_palette.py  test_flatpak_packaging.py  test_index_row_service.py  test_legal_title_candidates_ir.py  test_legal_title_case.py  test_matter_output_naming.py  test_matter_services.py  test_migrations.py  test_packaged_migration_data.py  test_packaging_version.py  test_party_labels.py  test_pdf_bundle.py  test_release_workflow.py  test_renderer_settings.py  test_reportlab_fallback.py  test_repositories.py  test_source_documents.py  test_ui_about_packaging.py  test_ui_matter_defaults.py  test_windows_packaging.py  test_word_converter.py
(+2 files in other folders)
