[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "huguenot-inn"
version = "0.4.2.4a"
description = "Small GUI tool to combine PDFs, add page numbers, create PDF bookmarks, and generate an authorities index."
requires-python = ">=3.11"
authors = [
  { name = "Nikhil Somaru" }
]
dependencies = [
  "platformdirs>=4.3,<5",
  "pymupdf>=1.24,<2",
  "python-docx>=1.1,<2",
  "reportlab>=4.4,<5",
  "yoyo-migrations>=9,<10",
  "tkinterdnd2>=0.4,<1",
  "docx2pdf>=0.1.8,<0.2",
]

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "pyright>=1.1,<2",
  "pytest>=8,<9",
  "ruff>=0.14,<1"
]

[project.optional-dependencies]
packaging = [
  "pyinstaller>=6,<7"
]

[project.urls]
Homepage = "https://example.com/pdf-bundle-numberer"

[project.scripts]
huguenot-inn = "huguenot.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/huguenot"]

[tool.hatch.build.targets.wheel.force-include]
"src/huguenot/persistence/migrations" = "huguenot/persistence/migrations"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
exclude = ["build", "dist", ".venv"]
typeCheckingMode = "basic"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]

[tool.uv]
default-groups = ["dev"]
